@startuml

Record <-- RecordDaoImpl
RecordDao <|.. RecordDaoImpl

class Record{
    - name:String
    - time:String
    - rank:int
    - score:int
    - setTime():void
    + setRank(int rank):void
    + getName():String
    + getRank():int
    + getTime():String
    + getScore():int
    + toString():String
}

interface RecordDao{
    + {abstract}addRecord(String name, int score):Record
    + {abstract}printRecord(String name, int score):void
}

class RecordDaoImpl{
    - rank:ArrayList<Record>
    + sortByScoreDescending():void
    + writeRecord(String name, int score):void
    + addRecord(String name, int score):Record
    + printRecord(String name, int score):void
}
@enduml